--- a/R/etest_02_data.Rmd
+++ b/R/etest_02_data.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Quiz01 Submission Time"
+title: "Quiz02 Submission Time"
 # author: "coop711"
 # date: "`r Sys.Date()`"
 output: html_document
@@ -24,7 +24,7 @@ options(width = 180)
 
 ```{r, data, echo = FALSE, results = "hide"}
 load("./red_and_black_180907_data.RData")
-quiz01 <- read.xlsx("../data/etest01.xlsx", 
+quiz02 <- read.xlsx("../data/etest02.xlsx", 
                         sheetIndex = 1, 
                         startRow = 3, 
                         endRow = 159, 
@@ -32,27 +32,24 @@ quiz01 <- read.xlsx("../data/etest01.xlsx",
 #                        colClasses = rep("character", 6), 
                         encoding = "UTF-8",
                         stringsAsFactors = FALSE)
-names(quiz01) <- c("name", "id", "dept", "score1", "score2", "time")
-quiz01$group <- class_roll$group
-quiz01$submit <- ifelse(is.na(quiz01$time), "미제출", "제출")
-quiz01$hours_passed <- as.numeric(difftime(Sys.time(), quiz01$time, units = 'days'))
+names(quiz02) <- c("name", "id", "dept", "score1", "score2", "time")
+quiz02$group <- class_roll$group
+quiz02$submit <- ifelse(is.na(quiz02$time), "미제출", "제출")
+quiz02$hours_passed <- as.numeric(difftime(Sys.time(), quiz02$time, units = 'days'))
 ## 학교 정보시스템이 GMT로 표기되어 있어서 9시간의 타임갭을 감안하여야 함.
-quiz01$days <- as.numeric(difftime("2018-09-10 09:00:00", quiz01$time, units = 'days'))
-quiz01$hours <- as.numeric(difftime("2018-09-10 09:00:00", quiz01$time, units = 'hours'))
-str(quiz01)
+quiz02$days <- as.numeric(difftime("2018-09-17 09:00:00", quiz02$time, units = 'days'))
+quiz02$hours <- as.numeric(difftime("2018-09-17 09:00:00", quiz02$time, units = 'hours'))
+str(quiz02)
 ```
-### 제출 시간
 
-```{r, echo = FALSE}
-pander(head(quiz01[, c("score1", "time")], n = 10))
-```
 
 ### 제출/미제출
 
 제출시간이 기록되지 않은 사람은 미제출.
 
 ```{r, echo = FALSE, results = "markup"}
-pander(table(quiz01$group, quiz01$submit))
+pander(table(quiz02$group, quiz02$submit))
+pander(chisq.test(table(quiz02$group, quiz02$submit)))
 ```
 
 ## 제출 시간의 분포
@@ -62,18 +59,18 @@ pander(table(quiz01$group, quiz01$submit))
 ### 시간 단위 기초통계량
 
 ```{r, echo = FALSE}
-# quiz01$hours
-summary(quiz01$hours)
-stem(quiz01$hours)
-max(quiz01$hours, na.rm = TRUE)
+# quiz02$hours
+summary(quiz02$hours)
+stem(quiz02$hours)
+max(quiz02$hours, na.rm = TRUE)
 ```
 
 ### 일 단위 마감 시간으로부터 제출 시간의 분포
 
 ```{r, echo = FALSE}
 par(family = "HCR Dotum LVT")
-pander(table(cut(quiz01$days, breaks = c(0:7), include.lowest = TRUE)), caption = "일 단위")
-barplot(rev(table(cut(quiz01$days, breaks = c(0:7), include.lowest = TRUE))), 
+pander(table(cut(quiz02$days, breaks = c(0:7), include.lowest = TRUE)), caption = "일 단위")
+barplot(rev(table(cut(quiz02$days, breaks = c(0:7), include.lowest = TRUE))), 
         space = 0,
         names.arg = paste0(7:1, "일"))
 title(main = "일 단위 퀴즈 제출 횟수")
@@ -82,23 +79,23 @@ title(main = "일 단위 퀴즈 제출 횟수")
 ### 시간 단위 마감 시간으로부터 제출 시간의 분포
 
 ```{r, echo = FALSE}
-breaks <- c(0:6, seq(24, 168, by = 24))
-pander(table(cut(quiz01$hours, breaks = breaks, include.lowest = TRUE)), caption = "시간 단위")
+breaks <- c(0:10, seq(24, 168, by = 24))
+pander(table(cut(quiz02$hours, breaks = breaks, include.lowest = TRUE)), caption = "시간 단위")
 ```
 
 ### 시간 당 제출 건수의 분포
 
 ```{r, echo = FALSE}
 par(family = "HCR Dotum LVT")
-widths <- c(rep(24, 6), 18, rep(1, 6))
-freqs <- table(cut(quiz01$hours, breaks = c(0:6, seq(24, 168, by = 24)), include.lowest = TRUE))
+widths <- c(rep(24, 6), 14, rep(1, 10))
+freqs <- table(cut(quiz02$hours, breaks = c(0:10, seq(24, 168, by = 24)), include.lowest = TRUE))
 heights <- freqs / diff(breaks)
-names_args <- c(paste0(7:1, "일"), rep("", 6))
+names_args <- c(paste0(7:1, "일"), rep("", 10))
 barplot(height = rev(heights), width = widths, 
         space = 0,
         names.arg = names_args)
 title(main = "시간당 퀴즈 제출 분포")
-arrows(x0 = 144, y0 = 4, x1 = 160, y1 = 1, length = 0.15, code = 2, col = "red", lwd = 1.5)
-text(x = 139, y = 4.5, labels = "저녁 6시", srt = 30, col = "red")
+arrows(x0 = 144, y0 = 4, x1 = 156, y1 = 0.75, length = 0.15, code = 2, col = "red", lwd = 1.5)
+text(x = 141, y = 4.5, labels = "오후 2시", srt = 20, col = "red")
 ```
 
