--- a/R/quiz180917_Report.Rmd
+++ b/R/quiz180917_Report.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Quiz 180912"
+title: "Quiz 180917"
 author: "coop711"
 date: "`r Sys.Date()`"
 output: html_document
@@ -20,39 +20,39 @@ options(width=180)
 ```
 
 ```{r, data, echo = FALSE, results = 'hide'}
-quiz0912 <- read.xlsx("../data/quiz180912.xlsx", 
+quiz0917 <- read.xlsx("../data/quiz180917.xlsx", 
                       sheetIndex = 1, 
                       startRow = 2, 
                       endRow = 158, 
-                      colIndex = c(3:7, 9:14), 
+                      colIndex = c(3:7, 9:15), 
                       colClasses = c(rep("character", 12)), 
                       encoding = "UTF-8",
                       stringsAsFactors = FALSE)
-str(quiz0912)
-names(quiz0912) <- c("dept", "id", "name", "year", "e.mail", "cell.no", "Q1", "Q2", "Q3", "Q4", "group")
-quiz0912$dept <- factor(quiz0912$dept)
-quiz0912$year <- factor(quiz0912$year)
-quiz0912$group <- factor(quiz0912$group, 
+str(quiz0917)
+names(quiz0917) <- c("dept", "id", "name", "year", "e.mail", "cell.no", "Q1", "Q2", "Q3", "Q4", "group", "gender")
+quiz0917$dept <- factor(quiz0917$dept)
+quiz0917$year <- factor(quiz0917$year)
+quiz0917$group <- factor(quiz0917$group, 
                          levels = c("Red", "Black"))
-quiz0912$Q1 <- factor(quiz0912$Q1, 
-                      levels = c("가", "나", "다", "라", "마"), 
-                      labels = c("9:1", "8:2", "7:3", "6:4", "5:5"))
-quiz0912$Q2 <- factor(quiz0912$Q2, 
+quiz0917$Q1 <- factor(quiz0917$Q1, 
+                      levels = c("가", "나", "다", "라", "마", "무응답"), 
+                      labels = c("9:1", "8:2", "7:3", "6:4", "5:5", "불참"))
+quiz0917$Q2 <- factor(quiz0917$Q2, 
                       levels = c("가", "나", "다", "라", "마"), 
                       labels = c("10%", "30%", "50%", "70%", "90%"))
-quiz0912$Q3 <- factor(quiz0912$Q3, 
+quiz0917$Q3 <- factor(quiz0917$Q3, 
                       levels = c("가", "나", "다", "라", "마"), 
                       labels = c("7:3", "6:4", "5:5", "4:6", "3:7"))
-quiz0912$Q4 <- factor(quiz0912$Q4, 
+quiz0917$Q4 <- factor(quiz0917$Q4, 
                       levels = c("가", "나", "다"),
-                      labels = c("찬성", 
-                                 "반대",
+                      labels = c("클 것", 
+                                 "크지 않을 것",
                                  "모름/무응답"))
-str(quiz0912)
+str(quiz0917)
 ```
 
 ```{r, randomization, echo = FALSE, results = 'hide'}
-pander(summary(quiz0912))
+pander(summary(quiz0917))
 ```
 
 ### 퀴즈 응답 비교
@@ -64,10 +64,10 @@ pander(summary(quiz0912))
 ##### 국세와 지방세
 
 ```{r, National and Local tax, echo = FALSE}
-tbl_q1_a <- quiz0912$Q1 %>% 
-  table(quiz0912$group, ., useNA = "ifany") %>%
+tbl_q1_a <- quiz0917$Q1 %>% 
+  table(quiz0917$group, ., useNA = "ifany") %>%
   addmargins
-colnames(tbl_q1_a)[6:7] %<>% `<-`(., c("결석", "계"))
+colnames(tbl_q1_a)[6:8] %<>% `<-`(., c("불참", "결석", "계"))
 rownames(tbl_q1_a)[3] %<>% `<-`(., "계")
 tbl_q1_a %>% pander 
 ```
@@ -76,7 +76,7 @@ tbl_q1_a %>% pander
 
 ```{r, National and Local tax in percentage, echo = FALSE}
 tbl_q1_a %>% 
-  `[`(3, -(6:7)) %>%
+  `[`(3, -(6:8)) %>%
   prop.table %>% 
   c(., "계" = sum(.)) %>%
   `*`(100) %>%
@@ -91,8 +91,8 @@ tbl_q1_a %>%
 ##### 공법도입과 대신들(집계표)
 
 ```{r, tax law and cabinets, echo = FALSE}
-tbl_q2_a <- quiz0912$Q2 %>% 
-  table(quiz0912$group, ., useNA = "ifany") %>%
+tbl_q2_a <- quiz0917$Q2 %>% 
+  table(quiz0917$group, ., useNA = "ifany") %>%
   addmargins
 colnames(tbl_q2_a)[6:7] %<>% `<-`(., c("결석", "계"))
 rownames(tbl_q2_a)[3] %<>% `<-`(., "계")
@@ -122,8 +122,8 @@ tbl_q2_a %>%
 ##### 품관촌민들의 찬반(집계표)
 
 ```{r, tax law and laymen, echo = FALSE}
-tbl_q3_a <- quiz0912$Q3 %>% 
-  table(quiz0912$group, ., useNA = "ifany") %>%
+tbl_q3_a <- quiz0917$Q3 %>% 
+  table(quiz0917$group, ., useNA = "ifany") %>%
   addmargins
 colnames(tbl_q3_a)[6:7] %<>% `<-`(., c("결석", "계"))
 rownames(tbl_q3_a)[3] %<>% `<-`(., "계")
@@ -146,26 +146,26 @@ tbl_q3_a %>%
   pander
 ```
 
-### 남북정상회담
+### 한반도 선언
 
-#### 질문지 답 부연 설명의 영향
+#### 질문 내용과 문항의 프레임 설정
 
 ##### Red 
 
-`r knitr::include_graphics("../pics/North_and_South_red.png", dpi = NA)`
+`r knitr::include_graphics("../pics/One_Korea_red.png", dpi = NA)`
 
 ##### Black
 
-`r knitr::include_graphics("../pics/North_and_South_black.png", dpi = NA)`
+`r knitr::include_graphics("../pics/One_Korea_black.png", dpi = NA)`
 
-찬성 문항에 부연설명을 덧붙이는지(Red), 반대 문항에 부연설명을 덧붙이는지(Black)에 따라 응답이 달라질 것으로 기대. 통계적으로 유의한 수준은 아니나 Red 쪽의 찬성 인원이 Black 보다 많이 나타남.
+질문과 응답문항에서 통일비용을 강조하는 프레임(Red)과 분단비용 감소로 인한 경제 성장 효과를 강조하는 프레임(Black) 중 어느 쪽이 효과적인지 살펴봅니다. 통일비용이라는 간단한 단어가 분단비용, 경제성장 등의 복합적인 단어보다 눈에 잘 들어온다는 것을 보여주고 있습니다. 그 차이는 통계적으로 유의합니다.
 
 ```{r, investigation, echo = FALSE}
-tbl_q4_a <- quiz0912$Q4 %>%
-  table(quiz0912$group, ., useNA = "ifany") %>%
+tbl_q4_a <- quiz0917$Q4 %>%
+  table(quiz0917$group, ., useNA = "ifany") %>%
   addmargins
 colnames(tbl_q4_a)[4:5] <- c("결석", "계")
-rownames(tbl_q4_a)[3] <- "계"
+rownames(tbl_q4_a) <- c("Red(통일비용)", "Black(경제성장)", "계")
 tbl_q4_a %>% 
   pander
 tbl_q4_a %>% 
@@ -178,7 +178,7 @@ tbl_q4_a %>%
 
 ```{r, investigation in percentage, echo = FALSE}
 tbl_q4_a %>% 
-  `[`(-3, -4) %>%
+  `[`(-3, -(4:5)) %>%
   prop.table(margin = 1) %>%
   `*`(100) %>%
   cbind("계" = rowSums(.)) %>%
@@ -186,21 +186,7 @@ tbl_q4_a %>%
   pander
 ```
 
-##### % 합계
-
-```{r, overall percentage, echo = FALSE}
-tbl_q4 <- quiz0912$Q4 %>%
-  table(useNA = "no") %>%
-  prop.table %>%
-  `*`(100) %>%
-  c(., sum(.)) %>%
-  format(digits = 2, nsmall = 1)
-names(tbl_q4)[4] <- "계"
-tbl_q4 %>%
-  pander
-```
-
 
 ```{r, save, echo = FALSE}
-save.image("../R/quiz0912.RData")
+save.image("../R/quiz0917.RData")
 ```
