--- a/R/quiz180917_Report.Rmd
+++ b/R/quiz180917_Report.Rmd
@@ -24,12 +24,12 @@ quiz0917 <- read.xlsx("../data/quiz180917.xlsx",
                       sheetIndex = 1, 
                       startRow = 2, 
                       endRow = 158, 
-                      colIndex = c(3:7, 9:15), 
+                      colIndex = c(3:7, 9:14), 
                       colClasses = c(rep("character", 12)), 
                       encoding = "UTF-8",
                       stringsAsFactors = FALSE)
 str(quiz0917)
-names(quiz0917) <- c("dept", "id", "name", "year", "e.mail", "cell.no", "Q1", "Q2", "Q3", "Q4", "group", "gender")
+names(quiz0917) <- c("dept", "id", "name", "year", "e.mail", "cell.no", "Q1", "Q2", "Q3", "Q4", "group")
 quiz0917$dept <- factor(quiz0917$dept)
 quiz0917$year <- factor(quiz0917$year)
 quiz0917$group <- factor(quiz0917$group, 
@@ -66,9 +66,9 @@ pander(summary(quiz0917))
 ```{r, National and Local tax, echo = FALSE}
 tbl_q1_a <- quiz0917$Q1 %>% 
   table(quiz0917$group, ., useNA = "ifany") %>%
-  addmargins
-colnames(tbl_q1_a)[6:8] %<>% `<-`(., c("불참", "결석", "계"))
-rownames(tbl_q1_a)[3] %<>% `<-`(., "계")
+  cbind(., "계" = rowSums(.)) %>%
+  rbind(., "계" = colSums(.))
+colnames(tbl_q1_a)[6:7] %<>% `<-`(., c("불참", "결석"))
 tbl_q1_a %>% pander 
 ```
 
@@ -93,9 +93,9 @@ tbl_q1_a %>%
 ```{r, tax law and cabinets, echo = FALSE}
 tbl_q2_a <- quiz0917$Q2 %>% 
   table(quiz0917$group, ., useNA = "ifany") %>%
-  addmargins
-colnames(tbl_q2_a)[6:7] %<>% `<-`(., c("결석", "계"))
-rownames(tbl_q2_a)[3] %<>% `<-`(., "계")
+  cbind(., "계" = rowSums(.)) %>%
+  rbind(., "계" = colSums(.))
+colnames(tbl_q2_a)[6] %<>% `<-`(., "결석")
 tbl_q2_a %>% pander 
 tbl_q2_a %>% 
   `[`(-3, -(6:7)) %>%
@@ -124,9 +124,9 @@ tbl_q2_a %>%
 ```{r, tax law and laymen, echo = FALSE}
 tbl_q3_a <- quiz0917$Q3 %>% 
   table(quiz0917$group, ., useNA = "ifany") %>%
-  addmargins
-colnames(tbl_q3_a)[6:7] %<>% `<-`(., c("결석", "계"))
-rownames(tbl_q3_a)[3] %<>% `<-`(., "계")
+  cbind(., "계" = rowSums(.)) %>%
+  rbind(., "계" = colSums(.))
+colnames(tbl_q3_a)[6] %<>% `<-`(., "결석")
 tbl_q3_a %>% pander 
 tbl_q2_a %>% 
   `[`(-3, -(6:7)) %>%
@@ -163,9 +163,10 @@ tbl_q3_a %>%
 ```{r, investigation, echo = FALSE}
 tbl_q4_a <- quiz0917$Q4 %>%
   table(quiz0917$group, ., useNA = "ifany") %>%
-  addmargins
-colnames(tbl_q4_a)[4:5] <- c("결석", "계")
-rownames(tbl_q4_a) <- c("Red(통일비용)", "Black(경제성장)", "계")
+  cbind(., "계" = rowSums(.)) %>%
+  rbind(., "계" = colSums(.))
+colnames(tbl_q4_a)[4] <- "결석"
+rownames(tbl_q4_a)[1:2] <- c("Red(통일비용)", "Black(경제성장)")
 tbl_q4_a %>% 
   pander
 tbl_q4_a %>% 
