--- a/R/quiz180919_Report.Rmd
+++ b/R/quiz180919_Report.Rmd
@@ -24,11 +24,11 @@ quiz0919 <- read.xlsx("../data/quiz180919.xlsx",
                       sheetIndex = 1, 
                       startRow = 2, 
                       endRow = 158, 
-                      colIndex = c(3:7, 9:15), 
+                      colIndex = c(3:7, 9:14), 
                       colClasses = c(rep("character", 12)), 
                       stringsAsFactors = FALSE)
 str(quiz0919)
-names(quiz0919) <- c("dept", "id", "name", "year", "e.mail", "cell.no", "Q1", "Q2", "Q3", "Q4", "group", "group.roll")
+names(quiz0919) <- c("dept", "id", "name", "year", "e.mail", "cell.no", "Q1", "Q2", "Q3", "Q4", "group")
 quiz0919$dept <- factor(quiz0919$dept)
 quiz0919$year <- factor(quiz0919$year)
 quiz0919$group <- factor(quiz0919$group, 
@@ -64,9 +64,9 @@ pander(summary(quiz0919))
 ```{r, National and Local tax, echo = FALSE}
 tbl_q1_a <- quiz0919$Q1 %>% 
   table(quiz0919$group, ., useNA = "ifany") %>%
-  addmargins
-colnames(tbl_q1_a)[5:7] %<>% `<-`(., c("불참", "결석", "계"))
-rownames(tbl_q1_a)[3] %<>% `<-`(., "계")
+  cbind(., "계" = rowSums(.)) %>%
+  rbind(., "계" = colSums(.))
+colnames(tbl_q1_a)[5:6] %<>% `<-`(., c("불참", "결석"))
 tbl_q1_a %>% pander 
 ```
 
@@ -91,9 +91,9 @@ tbl_q1_a %>%
 ```{r, tax law and cabinets, echo = FALSE}
 tbl_q2_a <- quiz0919$Q2 %>% 
   table(quiz0919$group, ., useNA = "ifany") %>%
-  addmargins
-colnames(tbl_q2_a)[5:6] %<>% `<-`(., c("결석", "계"))
-rownames(tbl_q2_a)[3] %<>% `<-`(., "계")
+  cbind(., "계" = rowSums(.)) %>%
+  rbind(., "계" = colSums(.))
+colnames(tbl_q2_a)[5] %<>% `<-`(., "결석")
 tbl_q2_a %>% pander 
 tbl_q2_a %>% 
   `[`(-3, -(5:6)) %>%
@@ -122,9 +122,9 @@ tbl_q2_a %>%
 ```{r, tax law and laymen, echo = FALSE}
 tbl_q3_a <- quiz0919$Q3 %>% 
   table(quiz0919$group, ., useNA = "ifany") %>%
-  addmargins
-colnames(tbl_q3_a)[6:7] %<>% `<-`(., c("결석", "계"))
-rownames(tbl_q3_a)[3] %<>% `<-`(., "계")
+  cbind(., "계" = rowSums(.)) %>%
+  rbind(., "계" = colSums(.))
+colnames(tbl_q3_a)[6] %<>% `<-`(., "결석")
 tbl_q3_a %>% pander 
 tbl_q2_a %>% 
   `[`(-3, -(6:7)) %>%
@@ -161,9 +161,10 @@ tbl_q3_a %>%
 ```{r, investigation, echo = FALSE}
 tbl_q4_a <- quiz0919$Q4 %>%
   table(quiz0919$group, ., useNA = "ifany") %>%
-  addmargins
-colnames(tbl_q4_a)[4:5] <- c("결석", "계")
-rownames(tbl_q4_a) <- c("Red(부연설명없음)", "Black(분배관련 부연설명)", "계")
+  cbind(., "계" = rowSums(.)) %>%
+  rbind(., "계" = colSums(.))
+colnames(tbl_q4_a)[4] <- "결석"
+rownames(tbl_q4_a)[1:2] <- c("Red(부연설명없음)", "Black(분배관련 부연설명)")
 tbl_q4_a %>% 
   pander
 tbl_q4_a %>% 
