--- a/R/Literacy_p.Rmd
+++ b/R/Literacy_p.Rmd
@@ -53,6 +53,7 @@ literacy_roll$id == class_roll$id
 kable(literacy_roll)
 literacy <- literacy_roll[, c(2:27)] #> 문해력 집계에 필요한 변수만 추출. 
 kable(literacy)
+literacy_bak <- literacy
 ```
 
 <!--
@@ -66,7 +67,7 @@ literacy_df <- literacy[1:25] %>%
 str(literacy_df)
 ```
 
-### Barplot
+### barplot
 
 막대그래프로 답안 분포를 시각적으로 살핀다. 차후 나오는 정답률과 함께 어느 문항에서 어느 답안을 많이 고르는지 파악하는 데 활용한다.
 
@@ -106,7 +107,7 @@ text(x = literacy_tbl[1, ] + literacy_tbl[2, ] + literacy_tbl[3, ] + literacy_tb
      labels = label_ptbl[4, ])
 ```
 
-### 문해력 점수 계산
+#### 문해력 점수 계산
 
 <!--* 정답 맞춰보기
     * 정답 읽어들이기. `what = ""`로 설정하여 `char`취급. 
@@ -125,7 +126,7 @@ ans <- "../data/literacy_ans.txt" %>%
 ans
 ```
 
-#### 정답과 대조하여 R(Right)/W(Wrong) 표시 
+##### 정답과 대조하여 R(Right)/W(Wrong) 표시 
     
 <!--* 채점표라는 의미의 `marks` 로 저장, (# 표시한 방식으로는 작동하지 않음)-->
     
@@ -138,7 +139,7 @@ marks_rw %>%
   pander
 ```
 
-#### 기초통계
+##### 학생별 점수 산출
 
 <!--+ 정답을 집계하기 위하여 "R" 갯수를 다시 산출하는 `ifelse()` 적용.
     + 4점씩 곱하면 100점 만점 기준의 점수가 됨. 
@@ -150,62 +151,24 @@ marks <- marks_rw %>%
   `==`("R") %>%
   ifelse(1, 0)
 score <- marks %>%
-  apply(MARGIN = 1, 
-        FUN = sum, na.rm = TRUE) %>%
+  apply(MARGIN = 1, FUN = sum, na.rm = TRUE) %>%
   `*`(4)
 score[score == 0] <- NA
 which(score < 60)
 ```
 
-
-```{r, pander score, echo = FALSE, eval = TRUE}
-score %>%
-  summary %>%
-  pander
-```
-
-#### 점수대별 집계 테이블
-
-* I수준(24점 이하), II수준(28 ~ 48점), III수준(52 ~ 72점), IV수준(76점 이상)
-
-```{r, table, echo = FALSE, eval = TRUE}
-score %>%
-  cut(breaks = c(0, 24, 48, 72, 100), 
-      include.lowest = TRUE, right = TRUE) %>%
-  table(useNA = "ifany") %>%
-  pander
-```
-
-#### 등급별 집계 테이블 
-
-```{r, kevekwise table, echo = FALSE, eval = TRUE}
-score_f <- score %>%
-  cut(breaks = c(0, 24, 48, 72, 100), 
-      include.lowest = TRUE, right = TRUE) %>%
-  factor(levels = c("[0,24]", "(24,48]", "(48,72]", "(72,100]"), 
-         labels = c("I", "II", "III", "IV"), 
-         ordered = TRUE) 
-score_f %>%
-  table(useNA = "ifany") %>%
-  pander
+```{r, pander score, echo = FALSE}
+pander(score)
 ```
 
 <P style = "page-break-before:always">
 
-#### Red and Black 비교
-
-##### 기초통계 비교
+##### Red and Black 비교
 
 ```{r, summary by group, echo = FALSE}
 score %>%
-  tapply(., literacy$group, 
-         FUN = { . %>% summary %>% round(digits = 1) }) %>%
+  tapply(., literacy$group, FUN = { . %>% summary %>% round(digits = 1) }) %>%
   pander
-```
-
-##### 줄기-잎 그림 총괄
-
-```{r, stem, echo = FALSE}
 # stem(score, scale = 2)
 score %>%
   stem(scale = 0.5)
@@ -214,8 +177,6 @@ Red <- literacy %$%
 Black <- literacy %$%
   `==`(group, "Black")
 ```
-
-##### 줄기-잎 그림 비교
 
 - Red
 
@@ -237,14 +198,14 @@ score %>%
 
 <!--#### Plots-->
 
-##### Box Plot 비교
+##### Box Plots
 
 ```{r, boxplots, echo = FALSE, fig.width = 6, fig.height = 6}
 score %>%
   plot(literacy$group, .)
 ```
 
-##### QQ plot 비교
+##### QQ plot
 
 ```{r, qqplots, echo = FALSE, fig.width = 6, fig.height = 6}
 qqplot(x = score[Red], y = score[Black], 
@@ -254,14 +215,13 @@ qqplot(x = score[Red], y = score[Black],
 
 <P style = "page-break-before:always">
 
-##### ECDF plot교 비교
+##### ECDF plot
 
 ```{r, ECDF, echo = FALSE, fig.width = 6, fig.height = 6, eval = TRUE}
 score %>%
 `[`(Red & !is.na(score)) %>%
 ecdf %>%
-plot(xlim = score %>% range(na.rm = TRUE), 
-     col = "red", main = "ECDF")
+plot(xlim = score %>% range(na.rm = TRUE), col = "red", main = "ECDF")
 score %>%
 `[`(Black & !is.na(score)) %>%
 ecdf %>%
@@ -272,23 +232,24 @@ plot(add = TRUE)
 <P style = "page-break-before:always">
 -->
 
-#### 문해력 등급 분석
-
-모든 문항 NA => 결석. 일부 문항 NA => 오답 처리, 계 추가
-
+##### 문해력 등급 판정
+    
+* I수준(24점 이하), II수준(28 ~ 48점), III수준(52 ~ 72점), IV수준(76점 이상) 
+    
 ```{r, literacy grade, echo = FALSE}
-score_tbl <- score_f %>%
+grade <- ifelse(score <= 24, "I", ifelse(score <= 48, "II", ifelse(score <= 72, "III", "IV"))) %>%
+                  factor(levels = c("I", "II", "III", "IV"))
+grade_tbl <- grade %>%
   table("문해력 등급 분포" = ., exclude = NULL) %>%
   c(., "계" = sum(.))
-names(score_tbl)[5] <- "결석"
-score_tbl %>%
+names(grade_tbl)[5] <- "결석"
+grade_tbl %>%
   t %>%
   kable(caption = "문해력 등급 분포")
-score_tbl_group <- literacy %$%
-  table("Group" = .$group, 
-        "문해력 등급 분포" = score_f, exclude = NULL)
-colnames(score_tbl_group)[5] <- "결석"
-score_tbl_group %>%
+grade_tbl_group <- literacy %$%
+  table("Group" = .$group, "문해력 등급 분포" = grade, exclude = NULL)
+colnames(grade_tbl_group)[5] <- "결석"
+grade_tbl_group %>%
   cbind(., "계" = rowSums(.)) %>%
   rbind(., "계" = colSums(.)) %>%
   kable(caption = "그룹별 문해력 등급 분포")
@@ -301,8 +262,7 @@ score_tbl_group %>%
 ```{r, item by type, echo = FALSE}
 type_kr <- "../data/literacy_type.txt" %>%
   scan(what = "") %>%
-  factor(levels = c("a", "b", "c"), 
-         labels = c("사실적", "추론적", "비판적"))
+  factor(levels = c("a", "b", "c"), labels = c("사실적", "추론적", "비판적"))
 ```
 
 <!--* 유형별 점수 파악
@@ -314,31 +274,25 @@ type_kr <- "../data/literacy_type.txt" %>%
 ```{r, computing scores by types, echo = FALSE, results = 'hide', eval = TRUE}
 score_type <- marks %>%
   t %>%
-  aggregate(list("유형" = type_kr), 
-            FUN = sum, na.rm = TRUE)
+  aggregate(list("유형" = type_kr), FUN = sum, na.rm = TRUE)
 score_type
-# score_type <- aggregate(t(marks), list("유형" = type_kr), FUN = sum, na.rm = TRUE)
+score_type <- aggregate(t(marks), list("유형" = type_kr), 
+                        FUN = sum, na.rm = TRUE)
 score_type == 0
-## `[<-`를 활용할 때 `value = `을 빠뜨리면 없다고 에러 발생.
-score_type %<>%
-  `[<-`(. == 0, value = NA) 
-# score_type[score_type == 0] <- NA
-score_type
+score_type[score_type == 0] <- NA
 score_type_student <- score_type %>%
   `[`(-1) %>%
   t
-# t(score_type[, -1])
+  t(score_type[, -1])
 N <- nrow(literacy)
-score_type_student %<>%
-  `rownames<-`(paste0("s", 1:N)) %>%
-  `colnames<-`(paste0(levels(type_kr), c("(52점)", "(36점)", "(12점)")))
-# dimnames(score_type_student) <- list(paste0("s", 1:N), paste0(levels(type_kr), c("(52점)", "(36점)", "(12점)")))
+dimnames(score_type_student) <- list(paste0("s", 1:N), 
+                                     paste0(levels(type_kr), c("(52점)", "(36점)", "(12점)")))
 ```
 
 ```{r, scores by types, echo = FALSE, results = 'hide', eval = TRUE}
 score_type_student %>%
   `*`(4) %>%
- kable
+  pander
 ```
 
 <!--##### 문항별 정답률-->
@@ -360,23 +314,21 @@ na_all <- marks_rw %>%
 -->
 
 ```{r, computing correct answer rates, echo = FALSE, results = 'hide', eval = TRUE}
-marks_2 <- marks_rw %>%
-  `[<-`(is.na(.), value = "W") %>%  #> NA는 모두 오답처리
-  `[<-`(na_all, , value = NA) %>%   #> 모든 문항이 오답이면 결석으로 간주하기 위하여 NA 부여
-# marks_2[is.na(marks_2)] <- "W"
-# marks_2[na_all, ] <- NA
-# marks_2 %<>% 
-  `==`("R") %>%                     #> 정답이면
-  ifelse(1, 0)                      #> 1, 그렇지 않으면 0점 (부분적 불참은 해당 문항만 0점) 
+marks_2 <- marks_rw
+marks_2[is.na(marks_2)] <- "W"
+marks_2[na_all, ] <- NA
+marks_2 %<>% 
+  `==`("R") %>%
+  ifelse(1, 0)
 rate_item <- marks_2 %>% 
-  apply(MARGIN = 2, 
-        FUN = mean, na.rm = TRUE) %>%
-  `*`(100) %>%
+  apply(MARGIN = 2, FUN = mean, na.rm = TRUE) %>%
+  `*`(100)
+str(rate_item)
+rate_item %<>% 
   round(digits = 1) %>%
-  as.matrix(nrow = 25) %>%
-  `rownames<-`(paste0("문", 1:25)) %>%
-  `colnames<-`("정답률")
-# dimnames(rate_item) <- list("문항" =  paste0("문", 1:25), "정답률" = "정답률")
+  as.matrix(nrow = 25)
+dimnames(rate_item) <- list("문항" =  paste0("문", 1:25), 
+                            "정답률" = "정답률")
 ```
 
 ##### 유형별 정답률
