--- a/R/quiz181001_02_Report.Rmd
+++ b/R/quiz181001_02_Report.Rmd
@@ -150,11 +150,11 @@ tbl_q3_a %>%
 
 `r knitr::include_graphics("../pics/Quiz181001_02_Q4_black.png", dpi = NA)`
 
-응답 문항 순(Red), 또는 응답 문항 역순(Black)에 따라 응답이 달라짐. 통계적으로 유의한 차이가 관찰됨.
+응답 문항 순(Red), 또는 응답 문항 역순(Black)에 따라 응답이 달라짐. 통계적으로 유의한 차이가 관찰됨. "불참" => "모름/무응답" 으로 재분류.
 
 ```{r, investigation, echo = FALSE}
-levels(quiz1001_02$Q4.2) <- c("제조업구조조정", "최저임금인상", "경기부진", "정부대응능력부족", "인구구조변화", "모름/무응답", "모름/무응답")
-#levels(quiz1001_02$Q4.2)[levels(quiz1001_02$Q4.2) %in% c("모름/무응답", "불참")] <- "모름/무응답" 
+# levels(quiz1001_02$Q4.2) <- c("제조업구조조정", "최저임금인상", "경기부진", "정부대응능력부족", "인구구조변화", "모름/무응답", "모름/무응답")
+levels(quiz1001_02$Q4.2)[levels(quiz1001_02$Q4.2) %in% c("모름/무응답", "불참")] <- "모름/무응답" 
 tbl_q4_a <- quiz1001_02$Q4.2 %>%
   table(quiz1001_02$group, ., useNA = "ifany") %>%
   cbind(., "계" = rowSums(.)) %>%
