--- a/R/quiz180404_Report.Rmd
+++ b/R/quiz180404_Report.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Quiz 180404"
+title: "Quiz 181017_01"
 author: "coop711"
 date: "`r Sys.Date()`"
 output: html_document
@@ -19,38 +19,38 @@ options(width=180)
 ```
 
 ```{r, data, echo = FALSE, results = 'hide'}
-quiz0404 <- read.xlsx("../data/quiz180404.xlsx", 
+quiz1017_01 <- read.xlsx("../data/quiz181017_01.xlsx", 
                       sheetIndex = 1, 
                       startRow = 2, 
-                      endRow = 182, 
+                      endRow = 155, 
                       colIndex = c(3:7, 9:14), 
                       colClasses = c(rep("character", 11)),
                       stringsAsFactors = FALSE)
-str(quiz0404)
-names(quiz0404) <- c("dept", "id", "name", "year", "e.mail", "cell.no", "Q1", "Q2", "Q3", "Q4", "group")
-quiz0404$dept <- factor(quiz0404$dept)
-quiz0404$year <- factor(quiz0404$year)
-quiz0404$group <- factor(quiz0404$group, 
+str(quiz1017_01)
+names(quiz1017_01) <- c("dept", "id", "name", "year", "e.mail", "cell.no", "Q1", "Q2", "Q3", "Q4", "group")
+quiz1017_01$dept <- factor(quiz1017_01$dept)
+quiz1017_01$year <- factor(quiz1017_01$year)
+quiz1017_01$group <- factor(quiz1017_01$group, 
                          levels = c("Red", "Black"))
-quiz0404$Q1 <- factor(quiz0404$Q1, 
+quiz1017_01$Q1 <- factor(quiz1017_01$Q1, 
                       levels = c("가", "나", "다", "라"), 
                       labels = c("확률적 표본추출", "할당법", "유선전화번호부", "RDD도입"))
-quiz0404$Q2 <- factor(quiz0404$Q2, 
+quiz1017_01$Q2 <- factor(quiz1017_01$Q2, 
                       levels = c("가", "나", "다", "라", "무응답"), 
                       labels = c("2배로", "4배로", "1/2로", "1/4로", "불참"))
-quiz0404$Q3 <- factor(quiz0404$Q3, 
+quiz1017_01$Q3 <- factor(quiz1017_01$Q3, 
                       levels = c("가", "나", "다", "라", "무응답"), 
                       labels = c("국민전체", "18세 이상 전체", "등록유권자 전체", "선거 당일 투표 유권자 전체", "불참"))
-quiz0404$Q4 <- factor(quiz0404$Q4, 
+quiz1017_01$Q4 <- factor(quiz1017_01$Q4, 
                       levels = c("가", "나", "다", "라", "마", "무응답"))
-quiz0404$Q4.2 <- quiz0404$Q4
-levels(quiz0404$Q4.2[quiz0404$group == "Black"]) <- c("다", "나", "가", "라", "마", "무응답")
-levels(quiz0404$Q4.2) <- c("지방선거와 동시에", "지방선거 이후 올해에", "내년이후", "기타", "모름/응답거절", "불참")
-str(quiz0404)
+quiz1017_01$Q4.2 <- quiz1017_01$Q4
+levels(quiz1017_01$Q4.2[quiz1017_01$group == "Black"]) <- c("다", "나", "가", "라", "마", "무응답")
+levels(quiz1017_01$Q4.2) <- c("지방선거와 동시에", "지방선거 이후 올해에", "내년이후", "기타", "모름/응답거절", "불참")
+str(quiz1017_01)
 ```
 
 ```{r, randomization, echo = FALSE, results = 'hide'}
-pander(summary(quiz0404))
+pander(summary(quiz1017_01))
 ```
 
 ### 퀴즈 응답 비교
@@ -62,7 +62,7 @@ pander(summary(quiz0404))
 ##### 확률적 표본추출방법 도입
 
 ```{r, fairness, echo = FALSE}
-tbl.q1 <- table(quiz0404$group, quiz0404$Q1, 
+tbl.q1 <- table(quiz1017_01$group, quiz1017_01$Q1, 
                 useNA = "ifany")
 tbl.q1.a <- addmargins(tbl.q1)
 colnames(tbl.q1.a)[5:6] <- c("결석", "계")
@@ -88,8 +88,8 @@ pander(round(tbl.q1.a.p.sum * 100,
 ##### 4배로 늘려야
 
 ```{r, Selection Bias, echo = FALSE}
-tbl.q2 <- table(quiz0404$group, 
-                quiz0404$Q2, 
+tbl.q2 <- table(quiz1017_01$group, 
+                quiz1017_01$Q2, 
                 useNA = "ifany")
 tbl.q2.a <- addmargins(tbl.q2)
 colnames(tbl.q2.a)[6:7] <- c("결석", "계")
@@ -117,8 +117,8 @@ pander(round(tbl.q2.a.p.sum * 100,
 ##### 선거당일 투표하는 유권자 전체
 
 ```{r, quota sampling, echo = FALSE}
-tbl.q3 <- table(quiz0404$group, 
-                quiz0404$Q3, 
+tbl.q3 <- table(quiz1017_01$group, 
+                quiz1017_01$Q3, 
                 useNA = "ifany")
 # pander(chisq.test(tbl.q3,
 #                   simulate.p.value = TRUE))
@@ -154,10 +154,10 @@ pander(round(tbl.q3.a.p.sum * 100,
 빠른 시기(지방선거와 동시 실시)가 먼저 나오는지(Red), 늦은 시기 (내년이후 실시)가 먼저 나오는지(Black)에 따라 응답이 달라질 것으로, Red 집단의 찬성비율이 높게 나올 것으로 기대하였으나, 유의한 차이는 아님. 
 
 ```{r, vote attitude, echo = FALSE}
-levels(quiz0404$Q4.2)[levels(quiz0404$Q4.2) %in% c("모름/응답거절", "불참")] <- 
+levels(quiz1017_01$Q4.2)[levels(quiz1017_01$Q4.2) %in% c("모름/응답거절", "불참")] <- 
  "모름/응답거절"
-tbl.q4 <- table(quiz0404$group, 
-                quiz0404$Q4.2, 
+tbl.q4 <- table(quiz1017_01$group, 
+                quiz1017_01$Q4.2, 
                 useNA = "always")
 tbl.q4.a <- addmargins(tbl.q4)
 colnames(tbl.q4.a)[6:7] <- c("결석", "계")
@@ -171,8 +171,8 @@ pander(chisq.test(tbl.q4[-3, -c(4:7)]))
 ##### % 비교.  
 
 ```{r, investigation in percentage, echo = FALSE}
-tbl.q4.no <- table(quiz0404$group, 
-                   quiz0404$Q4.2, useNA = "no")
+tbl.q4.no <- table(quiz1017_01$group, 
+                   quiz1017_01$Q4.2, useNA = "no")
 tbl.q4.p <- prop.table(tbl.q4.no[, -6], 
                        margin = 1)
 tbl.q4.p.sum <- cbind(tbl.q4.p, 
@@ -186,7 +186,7 @@ pander(round(tbl.q4.p.sum * 100,
 ##### % 합계
 
 ```{r, overall percentage, echo = FALSE}
-tbl.q4.overall <- table(quiz0404$Q4.2, 
+tbl.q4.overall <- table(quiz1017_01$Q4.2, 
                         useNA = "no")
 tbl.q4.o.p <- prop.table(tbl.q4.overall[-6])
 tbl.q4.o.p.sum <- c(tbl.q4.o.p, 
@@ -198,5 +198,5 @@ pander(round(tbl.q4.o.p.sum*100,
 ```
 
 ```{r, save, echo = FALSE}
-#save.image("../R/quiz0404.RData")
+#save.image("../R/quiz1017_01.RData")
 ```
