--- a/R/etest_10_report.Rmd
+++ b/R/etest_10_report.Rmd
@@ -14,6 +14,7 @@ library(xlsx)
 library(pander)
 library(knitr)
 library(readr)
+library(magrittr)
 panderOptions('table.split.table', Inf)
 options(width = 180)
 ```
@@ -131,4 +132,63 @@ plot(score1 ~ bird, data = quiz10,
 
 ```{r, echo = FALSE}
 pander(t.test(score1 ~ bird, data = quiz10))
+```
+
+### Quiz09 와 Quiz10
+
+```{r, echo = FALSE}
+quiz09 <- readRDS("quiz09.RDs")
+```
+
+#### 일요일에 제출한 사람들
+
+##### Quiz09
+
+```{r, echo = FALSE}
+quiz09$id[quiz09$days >= 0 & quiz09$days <= 1] %>%
+  is.na %>%
+  `!` %>%
+  sum 
+```
+##### Quiz10
+
+```{r, echo = FALSE}
+quiz10$id[quiz10$days >= 2 & quiz10$days <= 3] %>%
+  is.na %>%
+  `!` %>%
+  sum 
+```
+
+#### 두 퀴즈를 일요일에 제출한 사람들
+
+```{r, echo = FALSE}
+intersect(quiz09$id[quiz09$days >= 0 & quiz09$days <= 1], quiz10$id[quiz10$days >= 2 & quiz10$days <= 3]) %>% 
+  is.na %>%
+  `!` %>%
+  sum
+```
+
+#### 수요일에 제출한 사람들
+
+##### Quiz09
+
+```{r, echo = FALSE}
+quiz09$id[quiz09$days >= 4 & quiz09$days <= 5] %>%
+  is.na %>%
+  `!` %>%
+  sum 
+```
+##### Quiz10
+
+```{r, echo = FALSE}
+quiz10$id[quiz10$days >= 6 & quiz10$days <= 7] %>%
+  is.na %>%
+  `!` %>%
+  sum 
+```
+
+#### 두 퀴즈를 수요일에 제출한 사람들
+
+```{r, echo = FALSE}
+intersect(quiz09$id[quiz09$days >= 4 & quiz09$days <= 5], quiz10$id[quiz10$days >= 6 & quiz10$days <= 7]) %>% length
 ```
